loaded firebase data in ag-grid

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "scripts": {
     "ng": "ng",
     "postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points",
-    "start": "ng serve",
+    "start": "ng serve -o",
     "build-lib": "ng build @coreui/angular --prod",
     "test": "ng test",
     "test-lib": "ng test @coreui/angular",
@@ -33,11 +33,17 @@
     "@angular/common": "^9.0.0-rc.0",
     "@angular/compiler": "^9.0.0-rc.0",
     "@angular/core": "^9.0.0-rc.0",
+    "@angular/fire": "^5.2.3",
     "@angular/forms": "^9.0.0-rc.0",
     "@angular/platform-browser": "^9.0.0-rc.0",
     "@angular/platform-browser-dynamic": "^9.0.0-rc.0",
     "@angular/router": "^9.0.0-rc.0",
+    "ag-grid-angular": "^22.1.0",
+    "ag-grid-community": "^22.1.0",
     "core-js": "^2.6.10",
+    "firebase": "^7.5.2",
+    "hh-mm-ss": "^1.2.0",
+    "moment": "^2.24.0",
     "rxjs": "^6.5.3",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
