--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "firebase": "^7.5.2",
     "hh-mm-ss": "^1.2.0",
     "moment": "^2.24.0",
+    "ngx-bootstrap": "^5.2.0",
     "rxjs": "^6.5.3",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
